--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
+<body class="body" >
+    <form action="" id="form">
+        <select name="color" >
+            <option value="red">red</option>
+            <option value="blue">blue</option>
+            <option value="green">green</option>
+        </select>
+        <input type="submit">
+    </form>
+
+
     <script src="./js/app.js"></script>
 </body>
 </html>
