i dont know wat i make

--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body class="body" >
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body class="body">
     <form action="" id="form">
-        <select name="color" >
-            <option value="red">red</option>
-            <option value="blue">blue</option>
-            <option value="green">green</option>
-        </select>
-        <input type="submit">
+        <input type="text" name="name">
+        <input type="number" name="buy">
+      <input type="submit" />
     </form>
 
-
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
