i dont no what i make

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body class="body">
-    <form action="" id="form">
+    <!-- <form action="" id="form">
         <input type="text" name="name">
         <input type="number" name="buy">
+      <input type="submit" />
+    </form> -->
+    <form id="userInfo" action="">
+      <input type="text" name="userName" />
+      <input type="text" name="userFatherName" />
+      <textarea name="userAdres" id=""></textarea>
       <input type="submit" />
     </form>
 
