i realy dont no what imake

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <input type="text" name="userName" />
       <input type="text" name="userFatherName" />
       <textarea name="userAdres" id=""></textarea>
+      <input type="date" name="birthDay">
       <input type="submit" />
     </form>
 
